apps/homeassistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
  - name: http
    nodePort: 30123
    port: 8123
  selector:
    app: homeassistant
  type: NodePort
