apps/homeassistant/base/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: homeassistant
  name: homeassistant-external
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: home.charn.io
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.charn.io
    secretName: charn-io-wildcard-tls
