apps/homeassistant/base/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-protocols: TLSv1.2 TLSv1.3
  name: homeassistant-local
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: homeassistant.local.charn.io
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - homeassistant.local.charn.io
    secretName: charn-io-wildcard-tls
